Update: Fix upload image url